--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</div>
 		<div class="row">
            <div class="col">
-                <table class="table mb-0">
+                <table class="table mb-0 table-responsive">
                      <thead>
                          <tr>
                            <th>Sl.No</th>
